--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-fastify": "^10.3.5",
     "ioredis": "^5.3.2",
     "joi": "^17.12.2",
     "reflect-metadata": "^0.1.13",
