--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@nestjs/platform-fastify": "^10.3.5",
     "ioredis": "^5.3.2",
     "joi": "^17.12.2",
+    "nest-winston": "^1.9.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "short-unique-id": "^5.0.3"
+    "short-unique-id": "^5.0.3",
+    "winston": "^3.12.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
