added db integration test cases and http mapper test

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
         "test:e2e": "jest --testRegex=.e2e-spec.ts$",
-        "test:int": "jest --testRegex=.int-spec.ts$"
+        "test:int": "jest --testRegex=.int.spec.ts$"
     },
     "dependencies": {
         "@nestjs/common": "^10.0.0",
