--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
         "test:e2e": "jest --testRegex=.e2e-spec.ts$",
-        "test:int": "jest --testRegex=.int.spec.ts$"
+        "test:int": "jest --testRegex=.int.spec.ts$",
+        "lint-staged": "lint-staged",
+        "prepare": "husky"
+    },
+    "lint-staged": {
+        "*.{js,ts}": [
+            "npm run format",
+            "npm run lint"
+        ]
     },
     "dependencies": {
         "@nestjs/common": "^10.0.0",
@@ -51,6 +59,7 @@
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.0",
         "jest": "^29.5.0",
+        "lint-staged": "^15.2.2",
         "prettier": "^3.0.0",
         "source-map-support": "^0.5.21",
         "supertest": "^6.3.3",
