--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@nestjs/schematics": "^10.0.0",
         "@nestjs/testing": "^10.0.0",
         "@types/jest": "^29.5.2",
+        "@types/mongodb": "^4.0.7",
         "@types/node": "^20.3.1",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
@@ -58,6 +59,7 @@
         "eslint-plugin-prettier": "^5.0.0",
         "jest": "^29.5.0",
         "lint-staged": "^15.2.2",
+        "mongodb-memory-server": "^9.1.7",
         "prettier": "^3.0.0",
         "source-map-support": "^0.5.21",
         "ts-jest": "^29.1.0",
